refactor large
move GioReader up
add CjWriter2CjDocumentWriter
move ContentError stuff to .foundation.input
GraphmlReader:
- now depends on CJ (was vice versa)
- sends to CJ, not Gio
- new CjStream to GraphmlWriter
- CjDocument2Graphml: Write Cj-internal <key> only if used
CJ:
- stop using GioWriter
base:
- rename/document some graphml test files
- handle chaining of error handlers, provide BaseOutput and BaseXmlHandler, BaseCjOutput
- interface IHandleContentErrors is now central for error handling API
** inherits from new ContentErrorAware and LocationAware interfaces
- add ValidatingCjWriter/Stream
- add LoggingCjStream